--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fe9b6">  <td>24/07/05 13:44:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Softassert.demo()[pri:0, instance:assertions.Softassert@3835c46]">demo</td> 
-  <td>main@1798219673</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo4()[pri:-1, instance:testng.PrioritizeTest@20ce78ec]">demo4</td> 
+  <td>main@30578394</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo1()[pri:0, instance:testng.PrioritizeTest@20ce78ec]">demo1</td> 
+  <td>main@30578394</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo2()[pri:-2, instance:testng.PrioritizeTest@20ce78ec]">demo2</td> 
+  <td>main@30578394</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo3()[pri:2, instance:testng.PrioritizeTest@20ce78ec]">demo3</td> 
+  <td>main@30578394</td>   <td></td> </tr>
 </table>
