--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,24 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="72f59f">  <td>24/07/05 12:48:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.demo1()[pri:0, instance:testng.InvocationCountTest@3ce1e309]">demo1</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="9fe9b6">  <td>24/07/05 12:48:39</td>   <td>-5583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependsOnMethodsTest.loginToApp()[pri:0, instance:testng.DependsOnMethodsTest@795cd85e]">loginToApp</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="c7b6bd">  <td>24/07/05 12:48:45</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo3()[pri:2, instance:testng.PrioritizeTest@8dbdac1]">demo3</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="9fe9b6">  <td>24/07/05 12:48:33</td>   <td>-11662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependsOnMethodsTest.navigateToApp()[pri:0, instance:testng.DependsOnMethodsTest@795cd85e]">navigateToApp</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="8174ba">  <td>24/07/05 12:48:45</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.demo()[pri:0, instance:testng.SampleTest@158da8e]">demo</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="c7b6bd">  <td>24/07/05 12:48:45</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo1()[pri:0, instance:testng.PrioritizeTest@8dbdac1]">demo1</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="72f59f">  <td>24/07/05 12:48:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.demo1()[pri:0, instance:testng.InvocationCountTest@3ce1e309]">demo1</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="72f59f">  <td>24/07/05 12:48:45</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountTest.demo2()[pri:0, instance:testng.InvocationCountTest@3ce1e309]">demo2</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="c7b6bd">  <td>24/07/05 12:48:45</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo2()[pri:-2, instance:testng.PrioritizeTest@8dbdac1]">demo2</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
-<tr bgcolor="c7b6bd">  <td>24/07/05 12:48:45</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo4()[pri:-1, instance:testng.PrioritizeTest@8dbdac1]">demo4</td> 
-  <td>main@1521083627</td>   <td></td> </tr>
+<tr bgcolor="8c9f7e">  <td>24/07/08 13:32:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass2.demo()[pri:0, instance:parallelExecution.TestClass2@3e84448c]">demo</td> 
+  <td>TestNG-tests-1@2030431032</td>   <td></td> </tr>
+<tr bgcolor="b9a598">  <td>24/07/08 13:32:28</td>   <td>-72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass1.demo()[pri:0, instance:parallelExecution.TestClass1@101952da]">demo</td> 
+  <td>TestNG-tests-1@2030431032</td>   <td></td> </tr>
+<tr bgcolor="92827e">  <td>24/07/08 13:32:28</td>   <td>-72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass3.demo()[pri:0, instance:parallelExecution.TestClass3@d5b810e]">demo</td> 
+  <td>TestNG-tests-2@86199412</td>   <td></td> </tr>
+<tr bgcolor="d2d9cb">  <td>24/07/08 13:32:28</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass4.demo()[pri:0, instance:parallelExecution.TestClass4@43dac38f]">demo</td> 
+  <td>TestNG-tests-2@86199412</td>   <td></td> </tr>
+<tr bgcolor="e76cc7">  <td>24/07/08 13:32:28</td>   <td>-72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass5.demo()[pri:0, instance:parallelExecution.TestClass5@593aaf41]">demo</td> 
+  <td>TestNG-tests-3@824845148</td>   <td></td> </tr>
+<tr bgcolor="bff5b7">  <td>24/07/08 13:32:28</td>   <td>-38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass6.demo()[pri:0, instance:parallelExecution.TestClass6@5a56cdac]">demo</td> 
+  <td>TestNG-tests-3@824845148</td>   <td></td> </tr>
 </table>
