--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,33 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<<<<<<< HEAD
-<td>retryAnalyzer.TestClass</td>
-=======
-<td>testng.PrioritizeTest</td>
->>>>>>> branch 'master' of https://github.com/sncsrivalli/SeleniumA4.git
+<td>pom.LoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-=======
-<td>demo3</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>demo4</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
->>>>>>> branch 'master' of https://github.com/sncsrivalli/SeleniumA4.git
-<td>demo1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>demo2</td>
+<td>loginScript</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
