--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>demo2</td></tr>
-<tr><td>demo4</td></tr>
-<tr><td>demo1</td></tr>
-<tr><td>demo3</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
