--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,25 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<tr bgcolor="b9a598">  <td>24/07/08 13:49:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.demo2()[pri:0, instance:retryAnalyzer.TestClass@6babf3bf]">demo2</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>24/07/08 13:49:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.demo2()[pri:0, instance:retryAnalyzer.TestClass@6babf3bf]">demo2</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>24/07/08 13:49:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.demo2()[pri:0, instance:retryAnalyzer.TestClass@6babf3bf]">demo2</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>24/07/08 13:49:53</td>   <td>-36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.demo1()[pri:0, instance:retryAnalyzer.TestClass@6babf3bf]">demo1</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>24/07/08 13:49:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.demo2()[pri:0, instance:retryAnalyzer.TestClass@6babf3bf]">demo2</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-=======
-<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo4()[pri:-1, instance:testng.PrioritizeTest@20ce78ec]">demo4</td> 
-  <td>main@30578394</td>   <td></td> </tr>
-<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo1()[pri:0, instance:testng.PrioritizeTest@20ce78ec]">demo1</td> 
-  <td>main@30578394</td>   <td></td> </tr>
-<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo2()[pri:-2, instance:testng.PrioritizeTest@20ce78ec]">demo2</td> 
-  <td>main@30578394</td>   <td></td> </tr>
-<tr bgcolor="9fe9b6">  <td>24/07/06 13:03:13</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrioritizeTest.demo3()[pri:2, instance:testng.PrioritizeTest@20ce78ec]">demo3</td> 
-  <td>main@30578394</td>   <td></td> </tr>
->>>>>>> branch 'master' of https://github.com/sncsrivalli/SeleniumA4.git
+<tr bgcolor="efed8d">  <td>24/07/12 13:45:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginScript()[pri:0, instance:pom.LoginTest@61862a7f]">loginScript</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
 </table>
